Posts start at 1 instead of 0 similar to Reddit. Post scores and voting are now available on personal walls and individual post links. FB nested posts are now handled correctly. Video posts no longer show the incorrect score. Tweaked event queue timing to improve user performance on page loads. Posts are now collapsed at -10 instead of -25. Users can now toggle the visibility of each collapsed post. Now using local storage rather than imgur to host images.

--- a/plugin/src/inject/style.css
+++ b/plugin/src/inject/style.css
@@ -1,8 +1,16 @@
 
-.troll_hidden {
-	/*display: none;
-	color: red;*/
+.hidden {
+	display: none;
+	color: red;
 	text-align: center;
+}
+
+.notif {
+	text-align: center;
+}
+
+.extraPadding {
+	padding-top: 10px;
 }
 
 .faceit_modified {
